# pair_trading

./: .gitignore  CMakeLists.txt  pyproject.toml
pair_trading/: __init__.py  catalog.py  constants.py  global_filters.py  logger.py  pair_selection.py  plotting.py  portfolio.py  rolling_period.py  transaction_cost_model.py  utils.py  workflow.py
pair_trading/data_cleaner/: abstract.py
pair_trading/data_cleaner/implementations/: crypto.py  equity.py
pair_trading/data_loader/: abstract.py
pair_trading/data_loader/implementations/: ishares.py  static.py  yahoo.py
pair_trading/grouper/: abstract.py
pair_trading/grouper/implementations/: economic_classification.py  null.py  statistical_factors.py
pair_trading/logger/: logger_decorator.py  loggers.py
pair_trading/logger/configs/: basic.yaml  detailed.yaml
pair_trading/numba/: adf.py  chi2.py  ljung_box.py  var.py
pair_trading/numba_helpers/: adf.py  backtest.py  linalg.py  ljung_box.py  metrics.py  statistical.py  var.py
pair_trading/pair/: abstract.py
pair_trading/pair/implementations/: distance.py  engle_granger.py  johansen.py
pair_trading/pair/mixins/: metrics.py  plotting.py
pair_trading/strategies/: director.py  workflow.py
pair_trading/strategies/configs/: test_config.yaml
pair_trading/strategies/step/: abstract.py
pair_trading/strategies/step/implementations/: backtest.py  data_cleaner.py  data_loader.py  grouper.py  (+4 more)
src/: bindings.cpp  subportfolio.hpp
src/backtester/: backtester_engine.hpp  live_trades.hpp  trade.hpp  trade_blotter.hpp  trade_source.hpp  transaction_cost_engine.hpp
